<package>
    <!-- basic information -->
    <name>parfilter_decision</name>
    <version>1.0.0</version>
    <description>
        This is a brief description of your package.
    </description>
    <maintainer email="213213397@seu.edu.cn">Jingyan Wang</maintainer>
    <license>GPLv3</license>
    
    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Dependencies needed to compile this package. -->
    <build_depend>rospy</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>olfaction_msgs</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    
    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>rospy</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>olfaction_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>


</package>
